# cbot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cfg  example.ini
CMakeFindModules/: FindIniparser.cmake  FindLibConfig++.cmake  FindOpus.cmake
include/: Bot.h  Channel.h  ChannelListener.h  Channels.h  ConnectionListener.h  Connector.h  Entities.h  EntityEvents.h  EntityListener.h  HttpMumbleBot.h  IBot.h  ManagedSSLSocket.h  ManagedSocket.h  MoveMumbleBot.h  NameLookup.h  SSLClientSocket.h  SimpleBot.h  SimpleList.hpp  SimpleMumbleBot.h  Text.h  TextListener.h  User.h  UserListener.h
include/audio/: AudioData.h  CodecAdapter.h  OpusAdapter.h
include/bot/: Bot.h  IBot.h
include/events/: ChannelListener.h  ConnectionListener.h  TextListener.h  UserListener.h
include/extensions/: TextExtension.h
include/extensions/http/: HttpRelay.h  HttpRelayBot.h
include/io/: Connector.h
include/model/: Channel.h  Entity.h  SimpleList.hpp  Text.h  User.h
include/mumble/: HttpMumbleBot.h  MoveMumbleBot.h  MumbleConnector.h  SimpleMumbleBot.h
src/: Bot.cpp  Channel.cpp  Channels.cpp  Connector.cpp  Entities.cpp  Entity.cpp  HttpMumbleBot.cpp  ManagedSSLSocket.cpp  ManagedSocket.cpp  MoveMumbleBot.cpp  NameLookup.cpp  SSLClientSocket.cpp  SimpleBot.cpp  SimpleMumbleBot.cpp  User.cpp  main.cpp
src/audio/: OpusAdapter.cpp
src/bot/: Bot.cpp
src/extensions/http/: HttpRelay.cpp  HttpRelayBot.cpp
src/io/: Connector.cpp  SSLClientSocket.cpp
src/model/: Channel.cpp  Entity.cpp  User.cpp
src/mumble/: HttpMumbleBot.cpp  MoveMumbleBot.cpp  MumbleConnector.cpp  MumbleHeader.cpp  SimpleMumbleBot.cpp
